infra/k8s/prophet-mesh/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prophet-mesh
spec:
  selector:
    app: prophet-mesh
  ports:
  - name: http
    port: 8780
    targetPort: 8780
